plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.nour'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('buildJar', Jar) {
	from sourceSets.main.output
	archiveFileName = "saray-0.0.1-SNAPSHOT.jar"
}

bootJar {
	dependsOn buildJar
	archiveFileName = "saray-0.0.1-SNAPSHOT.jar"
	archiveBaseName = "saray-0.0.1-SNAPSHOT"
	archiveVersion = ""
}

